# lots

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  run_inference.sh  run_train.sh
ckpts/lots/: pair_former_config.json
scripts/lots/: convert_lots_weights.py  inference_lots.py  train_lots.py
scripts/sketchy/: sketchy.ipynb
src/lots/: cross_attn.py  lots_pipeline.py  pair_former.py  projectors.py
src/utils/: dinov2_utils.py  script_utils.py
static/css/: index.css
